--- a/pages/groupClassList/index.wxss
+++ b/pages/groupClassList/index.wxss
@@ -17,7 +17,7 @@ page{
     border-radius:14rpx;
     padding:20rpx;
     font-size:26rpx;
-
+    margin-bottom:30rpx;
 }
 .title{
     height:60rpx;
@@ -26,9 +26,12 @@ page{
 
 .row{
     height:60rpx;
+
+    align-items: center;
 }
 .row1{
     height:80rpx;
+    align-items: center;
     justify-content: flex-end;
 }
 .state{
