--- a/pages/training-space/index.wxml
+++ b/pages/training-space/index.wxml
@@ -64,7 +64,7 @@
 <!--            working: "2018英国教育中心（UKEC）实习"-->
             <view class="dec">
                 <text style="color:#999">所教科目：</text>
-                <text>{{teacher.skillList}}理</text>
+                <text>{{skillList}}</text>
             </view>
             <view class="dec">
                 <text style="color:#999">个人优势：</text>
